--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PassOrderCloneProject</string>
+    <string name="welcome_to">welcome to</string>
+    <string name="pass_order_title">PASSORDER</string>
 </resources>
