--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="welcome_to">welcome to</string>
     <string name="pass_order_title">PASSORDER</string>
     <string name="find_password">비밀번호를 잊으셨나요?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
